# security_access_token

./: AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  OAT.xml  README.md  README_zh.md  access_token.gni  bundle.json  code_signature.gni  fws.md  hisysevent.yaml  ohos.build
frameworks/accesstoken/: BUILD.gn  accesstoken_log.h  i_accesstoken_manager.h
frameworks/accesstoken/include/: accesstoken_service_ipc_interface_code.h  atm_tools_param_info_parcel.h  bundle_infos_rawdata.h  bundle_infos_rawdata_helper.h  check_hap_sign_result_rawdata.h  check_hap_sign_result_rawdata_helper.h  claw_auth_info_parcel.h  claw_auth_result_parcel.h  claw_token_challenge_parcel.h  cli_auth_info_parcel.h  cli_info_parcel.h  cli_info_result_parcel.h  cli_init_info_parcel.h  cli_permissions_result_parcel.h  hap_base_info_parcel.h  hap_info_parcel.h  hap_policy_parcel.h  hap_token_info_parcel.h  i_accesstoken_manager.h  i_permission_state_callback.h  i_token_sync_callback.h  native_token_info_for_sync_parcel.h  native_token_info_parcel.h  perm_state_change_scope_parcel.h  permission_def_parcel.h  permission_dialog_result_parcel.h  permission_grant_info_parcel.h  permission_list_state_parcel.h  permission_state_change_info_parcel.h  permission_state_change_scope_parcel.h  permission_state_full_parcel.h  permission_status_parcel.h  sec_comp_enhance_key_parcel.h  sec_comp_raw_data.h  skill_auth_info_parcel.h  skill_info_parcel.h  skill_info_result_parcel.h  skill_init_info_parcel.h  skill_permissions_result_parcel.h  tokensync_callback_ipc_interface_code.h  (+1 more)
frameworks/accesstoken/src/: atm_tools_param_info_parcel.cpp  bundle_infos_rawdata_helper.cpp  check_hap_sign_result_rawdata_helper.cpp  claw_auth_info_parcel.cpp  claw_token_challenge_parcel.cpp  cli_info_parcel.cpp  cli_info_result_parcel.cpp  cli_init_info_parcel.cpp  cli_permissions_result_parcel.cpp  hap_base_info_parcel.cpp  hap_info_parcel.cpp  hap_policy_parcel.cpp  hap_token_info_for_sync_parcel.cpp  hap_token_info_parcel.cpp  native_token_info_for_sync_parcel.cpp  native_token_info_parcel.cpp  perm_state_change_scope_parcel.cpp  permission_def_parcel.cpp  permission_dialog_result_parcel.cpp  permission_grant_info_parcel.cpp  permission_list_state_parcel.cpp  permission_state_change_info_parcel.cpp  permission_state_change_scope_parcel.cpp  permission_state_full_parcel.cpp  permission_status_parcel.cpp  sec_comp_enhance_key_parcel.cpp  skill_info_parcel.cpp  skill_info_result_parcel.cpp  skill_init_info_parcel.cpp  skill_permissions_result_parcel.cpp
frameworks/accesstoken/test/: BUILD.gn
frameworks/common/: AGENTS.md  BUILD.gn  cli_permission_map_parser.py  permission_check.py  permission_definition_filter.py  permission_definition_parser.py
frameworks/common/include/: accesstoken_common_log.h  accesstoken_dfx_define.h  accesstoken_klog.h  accesstoken_log.h  accesstoken_thread_msg.h  constant_common.h  data_validator.h  hisysevent_adapter.h  hisysevent_common.h  json_parser.h  parcel_utils.h  permission_map.h  permission_validator.h  random.h  random_mbedtls.h  service_ipc_interface_code.h  time_util.h  tokenid_attributes.h
frameworks/common/src/: accesstoken_common_log.cpp  accesstoken_klog.cpp  constant_common.cpp  data_validator.cpp  hisysevent_adapter.cpp  json_parser.cpp  permission_map.cpp  permission_validator.cpp  random_mbedtls.cpp  time_util.cpp  tokenid_attributes.cpp
frameworks/privacy/: BUILD.gn
frameworks/privacy/include/: add_perm_param_info_parcel.h  bundle_used_record_parcel.h  i_perm_active_status_callback.h  i_privacy_manager.h  i_state_change_callback.h  perm_active_response_parcel.h  perm_disable_policy_parcel.h  permission_used_record_parcel.h  permission_used_request_parcel.h  permission_used_result_parcel.h  permission_used_type_info_parcel.h  privacy_active_change_ipc_interface_code.h  privacy_am_service_ipc_interface_code.h  privacy_audio_service_ipc_interface_code.h  privacy_camera_service_ipc_interface_code.h  privacy_disable_change_ipc_interface_code.h  privacy_service_ipc_interface_code.h  privacy_state_change_ipc_interface_code.h  privacy_window_service_ipc_interface_code.h  remote_add_perm_param_info_parcel.h  remote_permission_used_info_parcel.h  sec_comp_enhance_data_parcel.h  used_record_detail_parcel.h
frameworks/privacy/src/: active_change_response_parcel.cpp  add_perm_param_info_parcel.cpp  bundle_used_record_parcel.cpp  perm_active_response_parcel.cpp  perm_disable_policy_parcel.cpp  permission_used_record_parcel.cpp  permission_used_request_parcel.cpp  permission_used_result_parcel.cpp  permission_used_type_info_parcel.cpp  remote_add_perm_param_info_parcel.cpp  remote_permission_used_info_parcel.cpp  sec_comp_enhance_data_parcel.cpp  used_record_detail_parcel.cpp
frameworks/privacy/test/: BUILD.gn
frameworks/test/unittest/: BUILD.gn  accesstoken_parcel_test.cpp  common_test.cpp  privacy_parcel_test.cpp
interfaces/inner_api/el5filekeymanager/: BUILD.gn  El5FilekeyCallbackInterface.idl  El5FilekeyManagerInterface.idl  data_lock_type.idl
interfaces/innerkits/accesstoken/: BUILD.gn  libaccesstoken_compat_sdk.map  libaccesstoken_sdk.map  libaccesstoken_sdk_coverage.map
interfaces/innerkits/analysis_model/: BUILD.gn
interfaces/innerkits/atlib/: BUILD.gn
interfaces/innerkits/nativetoken/: BUILD.gn
interfaces/innerkits/privacy/: BUILD.gn  libprivacy_sdk.map
interfaces/innerkits/token_callback/: BUILD.gn  libtoken_callback_sdk.map
interfaces/innerkits/token_setproc/: BUILD.gn  (+1 more)
services/accesstokenmanager/: AGENTS.md  BUILD.gn  access_token.cfg  access_token.rc  accesstoken_manager.gni  accesstoken_manager_service.map  accesstoken_maneger_service.map  cli_permission_map.json  permission_definitions.json  permission_definitions.json.rej
services/common/: BUILD.gn
services/el5filekeymanager/: BUILD.gn  el5_filekey_manager.cfg
services/privacymanager/: AGENTS.md  BUILD.gn  libprivacy_map  privacy.cfg  privacy.rc  privacy_manager.gni
services/tokensyncmanager/: AGENTS.md  BUILD.gn  token_sync.cfg  token_sync.rc  tokensync_manager.gni
tools/accesstoken/: BUILD.gn
(+2738 files in other folders)
