# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

group("accesstoken_build_module") {
  if (is_standard_system) {
    deps = [
      "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
      "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
      "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
      "//base/security/access_token/services/accesstokenmanager:accesstoken_manager_service",
      "//base/security/access_token/services/accesstokenmanager/main/sa_profile:accesstoken_sa_profile_standard",
      "//base/security/access_token/tools:tools_atm",
    ]
  }
  if (support_jsapi) {
    deps += [ "//base/security/access_token/interfaces/kits:napi_packages" ]
  }
}

group("tokensync_build_module") {
  if (is_standard_system && token_sync_enable == true) {
    deps = [
      "//base/security/access_token/interfaces/innerkits/tokensync:libtokensync_sdk",
      "//base/security/access_token/services/tokensyncmanager:token_sync_manager_service",
      "//base/security/access_token/services/tokensyncmanager/sa_profile:tokensync_sa_profile_standard",
    ]
  }
}

group("privacy_build_module") {
  if (is_standard_system) {
    deps = [
      "//base/security/access_token/interfaces/innerkits/privacy:libprivacy_sdk",
      "//base/security/access_token/services/privacymanager:privacy_manager_service",
      "//base/security/access_token/services/privacymanager/sa_profile:privacy_sa_profile_standard",
    ]
  }
}

group("accesstoken_build_module_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "//base/security/access_token/interfaces/innerkits/accesstoken/test:unittest",
      "//base/security/access_token/interfaces/innerkits/nativetoken/test:unittest",
      "//base/security/access_token/interfaces/innerkits/token_setproc/test:unittest",
      "//base/security/access_token/services/accesstokenmanager/test:unittest",
    ]
  }
  if (token_sync_enable == true) {
    deps += [
      "//base/security/access_token/interfaces/innerkits/tokensync/test:unittest",
      "//base/security/access_token/services/tokensyncmanager/test/unittest/token_sync_service:unittest",
    ]
  }
}
