# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

group("accesstoken_build_module_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      "//base/security/access_token/frameworks/test/unittest:unittest",
      "//base/security/access_token/interfaces/innerkits/accesstoken/test:unittest",
      "//base/security/access_token/interfaces/innerkits/nativetoken/test:unittest",
      "//base/security/access_token/interfaces/innerkits/privacy/test:unittest",
      "//base/security/access_token/interfaces/innerkits/token_callback/test:unittest",
      "//base/security/access_token/interfaces/innerkits/token_setproc/test:unittest",
      "//base/security/access_token/services/accesstokenmanager/test:unittest",
      "//base/security/access_token/services/common/database/test:unittest",
    ]
    if (ability_base_enable == true) {
      deps += [ "//base/security/access_token/services/privacymanager/test/unittest:unittest" ]
    }
  }
  if (token_sync_enable == true) {
    deps += [
      "//base/security/access_token/interfaces/innerkits/tokensync/test:unittest",
      "//base/security/access_token/services/tokensyncmanager/test/unittest/token_sync_service:unittest",
    ]
  }
}
