# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/ohos.gni")

config("accesstoken_communication_adapter_cxx_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${access_token_path}/frameworks/common/include",
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
  ]
}

ohos_shared_library("accesstoken_communication_adapter_cxx") {
  subsystem_name = "security"
  innerapi_tags = [
    "platformsdk_indirect",
    "chipsetsdk_indirect",
  ]
  part_name = "access_token"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  public_configs = [ ":accesstoken_communication_adapter_cxx_public_config" ]
  configs = [
    "${access_token_path}/config:access_token_compile_flags",
    "${access_token_path}/config:coverage_flags",
  ]
  include_dirs = [
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "include",
  ]

  sources = [
    "src/atm_tools_param_info_parcel.cpp",
    "src/hap_base_info_parcel.cpp",
    "src/hap_info_parcel.cpp",
    "src/hap_policy_parcel.cpp",
    "src/hap_token_info_for_sync_parcel.cpp",
    "src/hap_token_info_parcel.cpp",
    "src/native_token_info_parcel.cpp",
    "src/perm_state_change_scope_parcel.cpp",
    "src/permission_def_parcel.cpp",
    "src/permission_grant_info_parcel.cpp",
    "src/permission_list_state_parcel.cpp",
    "src/permission_state_change_info_parcel.cpp",
    "src/permission_status_parcel.cpp",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
  ]

  if (security_component_enhance_enable) {
    sources += [ "src/sec_comp_enhance_data_parcel.cpp" ]
    external_deps += [ "ipc:ipc_single" ]
  }
}
