# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../access_token.gni")

config("accesstoken_common_cxx_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("accesstoken_common_cxx") {
  subsystem_name = "security"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "access_token"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  public_configs = [ ":accesstoken_common_cxx_public_config" ]

  include_dirs = [
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/privacy/include",
    "include",
  ]

  sources = [
    "src/constant_common.cpp",
    "src/data_validator.cpp",
    "src/json_parser.cpp",
    "src/permission_map.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "json:nlohmann_json_static",
  ]

  configs = [ "${access_token_path}/config:coverage_flags" ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
