# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("privacy_communication_adapter_cxx") {
  subsystem_name = "security"
  part_name = "access_token"

  include_dirs = [
    "include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/privacy/include",
    "//base/security/access_token/frameworks/common/include",
    "//utils/native/base/include",
  ]

  sources = [
    "src/bundle_used_record_parcel.cpp",
    "src/permission_used_record_parcel.cpp",
    "src/permission_used_request_parcel.cpp",
    "src/permission_used_result_parcel.cpp",
    "src/perm_active_response_parcel.cpp",
    "src/used_record_detail_parcel.cpp",
  ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [ "ipc:ipc_core" ]
}
