# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../access_token.gni")

ohos_shared_library("privacy_communication_adapter_cxx") {
  subsystem_name = "security"
  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "access_token"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${access_token_path}/frameworks/common/include",
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/privacy/include",
    "include",
  ]

  configs = [ "${access_token_path}/config:coverage_flags" ]

  sources = [
    "src/add_perm_param_info_parcel.cpp",
    "src/bundle_used_record_parcel.cpp",
    "src/perm_active_response_parcel.cpp",
    "src/permission_used_record_parcel.cpp",
    "src/permission_used_request_parcel.cpp",
    "src/permission_used_result_parcel.cpp",
    "src/permission_used_type_info_parcel.cpp",
    "src/used_record_detail_parcel.cpp",
  ]

  if (access_token_feature_dtmf_tone) {
    defines = [ "FEATURE_DTMF_TONE" ]
  }

  external_deps = [ "c_utils:utils" ]

  if (security_component_enhance_enable) {
    sources += [ "src/sec_comp_enhance_data_parcel.cpp" ]
    external_deps += [ "ipc:ipc_single" ]
  }
}
